--- a/fargate/fluentbit.conf
+++ b/fargate/fluentbit.conf
@@ -1,14 +1,14 @@
 [INPUT]
     Name tail
-    Path /var/log/app/app.log
-    Tag debug-app-log
-    DB /tmp/fluent-bit-app.db
+    Path $PATH_TO_DEBUG_LOG
+    Tag debug-log
+    DB $PATH_TO_DEBUG_LOG_FILE_DB
     
 [INPUT]
     Name tail
-    Path /var/log/nginx/nginx.log
+    Path $PATH_TO_DEBUG_LOG
     Tag error-log
-    DB /tmp/fluent-bit-nginx.db
+    DB $PATH_TO_DEBUG_LOG_FILE_DB
 
 [FILTER]
     Name record_modifier
@@ -19,14 +19,14 @@
     
 [OUTPUT]
     Name cloudwatch
-    Match error-* 
-    region ap-northeast-1
-    log_group_name /ecs/galaxy-fluentbit
-    log_stream_prefix TASK_ID- 
+    Match error-log
+    region $CLOUDWATCH_REGION
+    log_group_name $CLOUDWATCH_LOG_GROUP_NAME
+    log_stream_prefix TASK_ID-
     auto_create_group true
 
 [OUTPUT]
     Name firehose
-    Match debug-* 
-    region ap-northeast-1
-    delivery_stream galaxy-debug-log
+    Match debug-log
+    region $FIREHOSE_REGION
+    delivery_stream $DELIVERY_STREAM
